<resources>
    <string name="app_name">CitasApp</string>

    <string name="prefs_file">com.example.citasapp.PREFERENCE_FILE_KEY</string>

    <string name="citasapp">CitasAPP</string>
    <string name="citaapp">CitaApp</string>

    //Texto login
    <string name="imageSplash">No image</string>
    <string name="login_new_user">¿Nuevo usuario? Registrarse</string>
    <string name="login_sign_in">Iniciar sesión</string>
    <string name="login_forgotten_password">¿Contraseña olvidada?</string>
    <string name="login_password">Contraseña</string>
    <string name="login_email">Email</string>
    <string name="login_welcome">Hola, bienvenido de nuevo</string>
    <string name="login_o">ò</string>

    //Texto register
    <string name="registrer_txtbutton">Registrarse</string>
    <string name="registrer_password">Rep. Contraseña</string>
    <string name="quote_home">Pedir cita</string>


    //Navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="search" />
</resources>
